fixed testimonials section mobile res

--- a/css/style.css
+++ b/css/style.css
@@ -1777,7 +1777,7 @@ canvas {
 }
 
 .career-job-listings .career-cv {
-  margin-top: 80px;
+  margin-top: 100px;
   margin-left: 15px;
   margin-right: 15px;
   padding-bottom: 0;
@@ -3330,4 +3330,18 @@ footer a:hover {
 .career-job h1{
   align-items: center;
   
+}
+
+@media screen and (max-width: 1140px) {
+  .career-job .slide-container{
+    width: 800px;
+  }
+
+}
+
+@media screen and (max-width: 740px) {
+  .career-job .slide-container{
+    width: 500px;
+  }
+
 }
